# sciencebot

./: .gitignore  HARDWARE.md  LICENSE.txt  README.md  README_old.md  error_constants.py  main.py  manual_control.py
3D_parts/: 9V_clip_mount.stl  DWM_BNO055_mount.stl  batt_regulator_mount.stl  cam_low_mount.stl  deck_extension.stl  dual_cam_mount.stl  generic_mount.stl  larger_opening_mount.stl  rpi_uno_mount.stl  (+4 more)
dev_ws/src/nav/: CMakeLists.txt  package.xml  setup.cfg  setup.py
dev_ws/src/nav/action/: Turn.action
dev_ws/src/nav/launch/: frame.launch.py  manual_drive.launch.py  my_script.launch.py  pose.launch.py  turnpid.launch.py  turtlesim.launch.py
dev_ws/src/nav/nav/: Fposition_pid.py  MotorControllerUSB.py  SerialMotor.py  backoff.py  bang.py  bang2.py  bang3.py  bturn.py  controller_base.py  demo.py  heading_pid_client.py  imu_pid.py  loop_run.py  motor_constants.py  motors.py  mover.py  mux.py  pid.py  pose_fusion.py  position_pid.py  position_pid_client.py  turn_action_client.py  turn_action_server.py  turtle_heading_pid.py  turtle_position_pid.py
dev_ws/src/nav/nav/clients/: heading_pid_client.py  run_position_pid_client.py  turn_action_client.py
dev_ws/src/nav/nav/dwm/: DWMTag.py  dwm.py
dev_ws/src/nav/nav/imu/: imu.py  imu_integrated_movement.py
dev_ws/src/nav/nav/motors/: MotorControllerUSB.py  SerialMotor.py  motors.py
dev_ws/src/nav/nav/turtlesim_controllers/: turtle_heading_pid.py  turtle_position_pid.py
dev_ws/src/nav/nav/vehicle_controllers/: bang.py  bang2.py  bang3.py  discrete.py  imu_pid.py  mixed.py  position_pid.py
(+74 files in other folders)
